--- a/pixi.toml
+++ b/pixi.toml
@@ -8,4 +8,17 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
-modular = ">=25.5.0.dev2025062805,<26"
+modular = ">=25.5.0.dev2025062815,<26"
+pytorch = ">=2.7.1,<3"
+torchvision = ">=0.22.0,<0.23"
+matplotlib = ">=3.10.3,<4"
+pandas = ">=2.3.0,<3"
+numpy = ">=2.3.0,<3"
+jupyter = ">=1.1.1,<2"
+plotly = ">=6.2.0,<7"
+scikit-learn = ">=1.7.0,<2"
+
+[pypi-dependencies]
+plotly = "*"
+yfinance = ">=0.2.64, <0.3"
+kaleido = ">=1.0.0, <2"
