--- a/pixi.toml
+++ b/pixi.toml
@@ -16,4 +16,6 @@ pandas = ">=2.3.0,<3"
 numpy = ">=2.3.0,<3"
 jupyter = ">=1.1.1,<2"
 scikit-learn = ">=1.7.0,<2"
+
+[pypi-dependencies]
 yfinance = ">=0.2.64, <0.3"
